[package]
name = "sump_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
cyw43 = { version = "0.3", features = [] }
cyw43-pio = { version = "0.4", features = [] }

ssd1306 = { version = "0.10", features = ["async"] }
display-interface = "0.5"
display-interface-i2c = "0.5"
embedded-graphics = "0.8"
tinybmp = "0.6"
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0"}
embassy-futures = "0.1"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
embedded-hal-bus = { version = "0.3", features = ["async"] }
heapless = "0.8"
rand = { version = "0.8", default-features = false }

[dependencies.embassy-executor]
version = "0.7"
features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread",
	    "executor-interrupt", "defmt"]

[dependencies.embassy-sync]
version = "0.6"
features = []

[dependencies.embassy-time]
version = "0.4"
features = ["defmt-timestamp-uptime"]

[dependencies.embassy-rp]
version = "0.4"
features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040", "intrinsics"]

[dependencies.embassy-net]
version = "0.6"
features = ["tcp", "udp", "dhcpv4", "medium-ethernet"]

[profile.release]
debug = 2
lto = true
opt-level = 3

[profile.dev]
debug = 2
lto = true
opt-level = 3